fixed problem with new table shadow position and z-index

--- a/app/assets/stylesheets/table/table.css.scss
+++ b/app/assets/stylesheets/table/table.css.scss
@@ -295,7 +295,7 @@
           height:10px;
           background: image-url('layout/thead_shadow.png') repeat 0 0;
           pointer-events:none;
-          z-index:10;
+          z-index:0;
         }
 
         // Horizontal movement
@@ -485,6 +485,10 @@
         tbody tr td div.cell {
           color:rgba(#666666,.5);
         }
+        div.shadow {
+          top:244px;
+        }
+
       }
       // tbody
 
